# HW_Vladimirov

./: .gitignore  .gitmodules  README.md
BillionAndFirstString/: CMakeLists.txt  README.md  char_traits.hpp  main  main.cpp  test_cxstring.cpp  test_xstring.cpp  test_xstring.hpp  xstring.hpp
BillionAndFirstString/src/: basic_xstring.hpp  buf_basic_xstring.hpp  test_wxstring.cpp  xstring.hpp
MxLib/: CMakeLists.txt  CalcDet.cpp  CalcDet.hpp  NumberMatrix.cpp  NumberMatrix.hpp  Readme.txt  Unpack.sh  main.cpp
MxLib/MxLib/: CMakeLists.txt  MxLib.hpp  NumberMatrix.cpp  NumberMatrix.hpp
MxLib/test/: CMakeLists.txt  Tests  Tests.cpp
WrapperCL/: Readme.txt  justbuf.c  platforms.c  Вопросы.txt
WrapperCL/books/script/: download_books.py  links.txt
clbrod/: CMakeLists.txt  README.md  main.cpp  results.txt
clbrod/src/: clbrod.cpp  clbrod.hpp  cppl.cpp  cppl.hpp  main.cpp  other_func.hpp
clbrod/src/config/kernels/: fractal.cl
clbrod/src/kernels/: fractal.cl
hidra/: CMakeLists.txt  adder.cl  build.sh  cppl.cpp  cppl.hpp  main.cpp  mycllib.cpp  mycllib.h  readme.md  test_speed.sh  Вопросы.txt
hidra/results/: after_async  after_async1  after_async2  before_async  before_async1
hidra/src/: find.cpp  find_impl.cpp  find_impl.hpp  main.cpp  main_test_speed.cpp  sort.cpp  sorter_test_speed.cpp  test_speed.cpp
hidra/src/test/: test_adder.cpp  test_kernel_func.cpp  test_sorter.cpp  test_speed.cpp  test_speed.hpp
hidra/src/test/finder/: converter.hpp  test_finder.cpp
hidra/src/test/sorter/: test_kernel_func.cpp  test_sorter.cpp  test_speed.cpp  test_speed.hpp
micro_vector/: CMakeLists.txt
micro_vector/src/: buf_mivector.hpp  main.cpp  mivector.hpp  test_mivector.cpp
